# TestJob

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_09_28_181958_39baa9b19fdd_first_migration.py
app/: settings.py
app/crud/: __init__.py  crud_base.py  crud_deliveries.py  errors.py
app/db/: __init__.py  base_class.py  session.py
app/debs/: db.py
app/dto/: contracts.py
app/models/: __init__.py  deliveries.py
app/requests/cbr/: cbr_methods.py
app/requests/sheet/: __init__.py  sheet_methods.py
docker/postgresql/: init.sh
scheduler/: Dockerfile  app.py
scheduler/tasks/: tasks.py
