[tool.poetry]
name = "unwinddigital"
version = "0.1.0"
description = "test job"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.41"
gspread = "^5.5.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
bs4 = "^0.0.1"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
sqlalchemy_mptt = "^0.2.5"
fastapi = "^0.85.0"
celery = "^5.2.7"
redis = "^4.3.4"
lxml = "^4.9.1"
pre-commit = "^2.20.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
